added modal for register link

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon server.js",
     "start": "node server.js",
     "seed": "node seeds/seed.js"
   },
@@ -20,6 +21,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^3.0.1",
     "sequelize": "^6.3.5"
   },
   "author": "",
