--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.2.5",
     "nodemon": "^3.0.1",
     "sequelize": "^6.3.5"
